# improving-inference-for-neural-image-compression

./: .gitignore  LICENSE  README.md  adam.py  bb_no_sga.py  bb_plain.py  bb_sga.py  boilerplate.py  configs.py  danneal.py  demo.ipynb  keras_utils.py  learned_prior.py  map.py  math_ops.py  mbt2018.py  mbt2018_bb.py  nn_models.py  requirements.txt  sga.py  ste.py  tf_boilerplate.py  unoise.py  utils.py
ans-coder/: Cargo.toml  README.md
ans-coder/src/: distributions.rs  lib.rs
ans-coder/src/internal/: distributions.rs  mod.rs
results/kodak/: bb_sga-psnr.csv  mbt2018-psnr.csv  sga-psnr.csv
results/tecnick/: bb_sga-psnr.csv  mbt2018-psnr.csv  sga-psnr.csv
